# Kiss2FSM

./: .gitignore  Circuit.hs  Dot.hs  FSMs.cabal  FSMs.hs  Kiss.hs  Mealy.hs  Minimization.hs  Minimize.hs  Patterns.hs  README.md  ReadDot.hs
src/: Circuit.hs  Dot.hs  FSMs.hs  Kiss.hs  Mealy.hs  Minimization.hs  Minimize.hs  Reachability.hs  ReadDot.hs
