name: FSMs
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable FSMs
  ghc-options: -O2 -Wall
  main-is: FSMs.hs
  buildable: True
  build-depends:
      base -any,
      containers -any,
      data-ordlist -any,
      directory -any,
      parsec -any
  other-modules:
      Minimization
      Circuit
      Kiss
      Patterns
      Play
