name: FSMs
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable FSMs
  ghc-options: -O2 -Wall
  main-is: FSMs.hs
  buildable: True
  build-depends:
      base -any,
      bytestring -any,
      containers -any,
      data-ordlist -any,
      directory -any,
      parsec -any,
      text -any,
      vector -any
  other-modules:
      Circuit
      Files
      Kiss
      Minimization
      Patterns
Executable Minimize
  ghc-options: -O2 -Wall -fprof-auto -prof "-with-rtsopts=-p -s -h"
  main-is: Minimize.hs
  buildable: True
  build-depends:
      base -any,
      bytestring -any,
      containers -any,
      data-ordlist -any,
      directory -any,
      parsec -any,
      text -any,
      time -any,
      vector -any
  other-modules:
      Mealy
      Minimization
      ReadDot
