name: FSMs
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
Executable FSMs
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  main-is: FSMs.hs
  buildable: True
  build-depends:
      base -any,
      bytestring -any,
      containers -any,
      data-ordlist -any,
      directory -any,
      parsec -any,
      text -any,
      vector -any
  other-modules:
      Circuit
      Dot
      Kiss
      Minimization
      Patterns
Executable Minimize
  hs-source-dirs: src
  ghc-options: -O2 -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  main-is: Minimize.hs
  buildable: True
  build-depends:
      base -any,
      bytestring -any,
      containers -any,
      mtl -any,
      parsec -any,
      text -any
  other-modules:
      Mealy
      Minimization
      ReadDot
